--- a/billing.html
+++ b/billing.html
@@ -16,14 +16,20 @@ document.getElementById("selectedPlan").innerText = urlParams.get('plan');
 
 <p>You selected: <strong id="selectedPlan"></strong></p>
 
-<form action="success.html">
-<label>Email:</label><br>
-<input type="email" required><br><br>
-
-<label>Server Name:</label><br>
-<input type="text" required><br><br>
-
-<button type="submit" class="btn">Complete Order</button>
+<form
+  action="https://formspree.io/f/mykdwdel"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Server Name
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
 </form>
 
 </body>
